#
# configure.in for the OpenSSL IBMCA engine project
#

AC_INIT(openssl-ibmca-engine, 0.1, opencryptoki-users@lists.sf.net)
AM_INIT_AUTOMAKE(1.6.3)

# Debugging support
AC_ARG_ENABLE(debug,
		AC_HELP_STRING([--enable-debug], [turn on all debugging flags [default is off]]),
		[enable_debug="yes"
		 AC_MSG_RESULT([*** Enabling debugging at user request ***])],)

# If the user has not set CFLAGS, do something appropriate
test_CFLAGS=${CFLAGS+set}
if test "$test_CFLAGS" != set; then
	if test "x$enable_debug" == "xyes"; then
		CFLAGS="-O0 -g -DDEBUG"
	else
		CFLAGS="-O2"
	fi
fi

# libica
AC_MSG_CHECKING([libica-2.x])
AC_CHECK_HEADER([ica_api.h], [], \
             AC_MSG_ERROR([*** libica header not found]))
AC_CHECK_LIB(ica, ica_open_adapter, [], \
             AC_MSG_ERROR([*** libica-2.x library not found]), [-lssl])

# OpenSSL location
AC_MSG_CHECKING([OpenSSL])
AC_CHECK_LIB(crypto, RAND_add, [], \
             AC_MSG_ERROR([*** libcrypto not found]))

AC_DISABLE_STATIC
AC_PROG_CC
AC_PROG_LIBTOOL

CFLAGS="$CFLAGS -Wall"
AC_SUBST(CFLAGS)

AC_OUTPUT(Makefile openssl.cnf.sample)

echo "CFLAGS=$CFLAGS"
